v1.10 | Added placeholders and fixed overflow

--- a/index.css
+++ b/index.css
@@ -180,6 +180,7 @@ textarea {
     display: flex;
     flex-direction: column;
     gap: 5px;
+    overflow: hidden;
 }
 
 #result {
